--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Vite</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="//at.alicdn.com/t/c/font_2267006_1f7m7kqaq0v.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
